fix: gap tab menu

--- a/src/output.css
+++ b/src/output.css
@@ -433,6 +433,9 @@
   .gap-\[34px\] {
     gap: 34px;
   }
+  .gap-\[50px\] {
+    gap: 50px;
+  }
   .gap-\[100px\] {
     gap: 100px;
   }
